# jax-gravity

./: .gitignore  README.md  main.py  main2.py  main_toroidal.py  pyproject.toml  requirements.txt  test.ipynb  utils.py
notebooks/: solve.ipynb  spherical-solution.ipynb  test.ipynb  test_spherical.ipynb
