[tool.poetry]
name = "jax-gravity"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "*"
jax = "*"
jaxlib = "*"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
